Fix Anatomy Layout Problems

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@ h5{
   font-family: Merriweather;
   font-size: 1.4rem;
   font-weight: 900;
-  padding: 7% 0 0 0;
+  padding: 4% 0 0 0;
 }
 h6{
   font-family: Merriweather;
